--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "argentbank",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://LaetitiaCadet.github.io/argentbank",
+  "homepage": "https://LaetitiaCadet.github.io/ArgentBank",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,7 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": " gh-pages -d docs"
+    "predeploy": "npm run build",
+    "deploy": " gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
